@startuml
'https://plantuml.com/class-diagram

abstract class GameTemplate {
    # enemyCycleDuration:int
    # heroCycleDuration:int
    # enemyCycleTime:int
    # heroCycleTime:int
    # bossNum:int
    # bossVanishScore:int
    # eliteEnemyProbability:double
    # ratio:double
    + GameTemplate(boolean bgmStart)
    + {static} action():void
    + {static} enemyTimeCountAndNewCycleJudge():boolean
    + {static} heroTimeCountAndNewCycleJudge():boolean
    + {static} isCreate(double probability):boolean
    + {abstract} createEnemy():void
    + {abstract} difficultyIncrease():void
    + {static} isThreshold():boolean
    + {static} enemyShootAction():void
    + {static} heroShootAction():void
    + {static} bulletsMoveAction():void
    + {static} propSupplyMove():void
    + {static} aircraftsMoveAction():void
    + {static} crashCheckAction():void
    + {static} postProcessAction():void
    + {static} print(Graphics g):void
    + {static} printImageWithPositionRevised(Graphics g, List<? extends AbstractFlyingObject> objects):void
    + {static} paintScoreAndLife(Graphics g):void
}

class EasyGame {
    + EasyGame(boolean bgmStart)
    + createEnemy():void
    + difficultyIncrease():void
}

class MediumGame {
    + MediumGame(boolean bgmStart):void
    + createnemy():void
    + difficultyIncrease():void
}

class HardGame {
    + HardGame(boolean bgmStart)
    + createEnemy():void
    + difficultyIncrease():void
}

GameTemplate <|-- EasyGame
GameTemplate <|-- MediumGame
GameTemplate <|-- HardGame

@enduml